<resources>
    <string name="app_name">FitAbs</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="action_settings">Setting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="quote">Quote of the Day</string>
    <string name="feedback">Feedback</string>
    <string name="feedbackName">Enter Your Name</string>
    <string name="feedbackMsg">Enter Your Message</string>
    <string name="feedbackEmail">Enter Your Email</string>
    <string name="submit">Submit</string>
    <string name="exercise">Exercise Guide</string>

    <string name="news">News</string>
    <string name="news1">Could exercise be making you sick? Up to half of athletes experience some form of gastrointestinal discomfort while exercising.  While the severity of symptoms varies between cases, these can include nausea, vomiting, abdominal angina, and bloody diarrhoea.  This is because blood flow is typically reduced during intense exercise, the Sports Medicine study revealed.</string>
    <string name="news2">After four years in the finance industry, prioritising her work not her health, Nessa had gained weight. But she then embarked on a new healthy lifestyle, started documenting it on Instagram, and now has 358,000 followers.</string>

    <string name="arms">Arms</string>
    <string name="armsEx">Arms Exercise</string>
    <string name="armsName1"><b>Bicep Curls</b></string>
    <string name="armsName2"><b>Hammer Curls</b></string>
    <string name="armsName3"><b>Tricep Push Down</b></string>
    <string name="armsEx1">Stand up straight with a dumbbell in each hand at arm length. Keep your elbows close to your torso and rotate the palms of your hands until they face forward.</string>
    <string name="armsEx2">Stand up with your torso upright and a dumbbell on each hand being held at arms length. The elbows should be close to the torso.</string>
    <string name="armsEx3">Attach a straight or angled bar to a high pulley and grab with an overhand grip (palms facing down) at shoulder width. Standing upright with the torso straight and a very small inclination forward, bring the upper arms close to your body and perpendicular to the floor.</string>

    <string name="chest">Chest</string>
    <string name="chestEx">Chest Exercise</string>
    <string name="chestName1"><b>Bench Press</b></string>
    <string name="chestName2"><b>Incline Press</b></string>
    <string name="chestName3"><b>Decline Press</b></string>
    <string name="chestEx1">Lie faceup on a horizontal bench, with buttocks on the bench and feet flat on the ground.</string>
    <string name="chestEx2">Lie back on an incline bench with a dumbbell in each hand atop your thighs. The palms of your hands will be facing each other.</string>
    <string name="chestEx3">Lie on decline bench (between 20 ad 40 degrees). with the head angled down and feet fixe to prevent sliding and grasp the barbell with an overhand grip shoulder with.</string>

    <string name="shoulders">Shoulders</string>
    <string name="shouldersEx">Shoulders Exercise</string>
    <string name="shouldersName1"><b>Barberll Shoulder Press</b></string>
    <string name="shouldersName2"><b>Side Lateral Raise</b></string>
    <string name="shouldersName3"><b>Seated Lateral Raise</b></string>
    <string name="shouldersEx1">Sit on a bench with back support in a squat rack. Position a barbell at a height that is just above your head. Once you pick up the barbell with the correct grip width, lift the bar up over your head by locking your arms.</string>
    <string name="shouldersEx2">Side Lateral Raise. The dumbbell lateral raise is an isolation exercise that strengthens the entire shoulder with an emphasis on the sides of the deltoid muscles. Standing in a shoulder-width stance, grab a pair of dumbbells with palms facing inward and let them hang at your sides.</string>
    <string name="shouldersEx3">Grab a set of dumbbells and sit upright on a flat bench. Allow your arms to hang down by your sides with your palms facing towards each other.</string>

    <string name="leg">Leg</string>
    <string name="legEx">Leg Exercise</string>
    <string name="legName1"><b>Squats</b></string>
    <string name="legName2"><b>Leg Press</b></string>
    <string name="legName3"><b>Lunges</b></string>
    <string name="legEx1">Begin with the barbell supported on top of the traps. The chest should be up and the head facing forward.Descend by flexing the knees, refraining from moving the hips back as much as possible.</string>
    <string name="legEx2"> Keep your upper body straight, with your shoulders back and relaxed and chin up.</string>
    <string name="legEx3">Using a leg press machine, sit down on the machine and place your legs on the platform directly in front of you at a medium (shoulder width) foot stance.</string>

    <string name="back">Back</string>
    <string name="backEx">Back Exercise</string>
    <string name="backName1"><b>DeadLift</b></string>
    <string name="backName2"><b>Bend Over Barbell Row</b></string>
    <string name="backName3"><b>Wide-Grip Pull Up</b></string>
    <string name="backEx1">Grab the bar. Bend over without bending your legs. Bend your knees. Drop into position by bending your knees until your shins touch the bar.</string>
    <string name="backEx2">Holding a barbell with a pronated grip, bend your knees slightly and bring your torso forward, by bending at the waist, while keeping the back straight until it is almost parallel to the floor.</string>
    <string name="backEx3">Begin from a dead hang, elbows straight, chest up, shoulders back and tight, eyes trained on the bar above. Pull yourself up toward the bar.</string>

    <string name="bmiTitle">BMI Calculator</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="weight">Weight (KG)</string>
    <string name="height">Height (CM)</string>
    <string name="under_weight">Under Weight</string>
    <string name="normal">Normal</string>
    <string name="over_weight">Over Weight</string>
    <string name="status">Status: </string>
    <string name="bmi">BMI: </string>


    <string name="healthyrecipe">Healthy Recipes</string>
    <string name="salmon">Oven Baked Salmon</string>
    <string name="cloveschicken">40 Cloves and Chicken</string>
    <string name="garlicShrimp">Garlic Shrimp</string>
    <string name="romanchicken">Roman-Style Chicken</string>

    <string name="cloveschickenexp">
        <b>Ingredients:</b>\n
            1 whole chicken (broiler/fryer) cut into 8 pieces\n
            1/2 cup plus 2 tablespoons olive oil\n
            10 sprigs fresh thyme\n
            40 peeled cloves garlic\n
            Salt and pepper\n\n
        <b>Directions:</b>\n
            1) Preheat oven to 350 degrees F.\n
            2) Season chicken with salt and pepper. \n
            3) Toss with a 2 tablespoons olive oil and brown on both sides in a wide fry pan or skillet over high heat. \n
            4) Remove from heat, add oil, thyme, and garlic cloves. Cover and bake for 1 1/2 hours. \n
            5) Remove chicken from the oven, let rest for 5 to 10 minutes, carve, and serve. \n
    </string>
    <string name="garlicshrimpexp">
        <b>Ingredients:</b>\n
            8 tablespoons (1 stick) unsalted butter, divided\n
            1 1/2 pounds medium shrimp, peeled and deveined\n
            Kosher salt and freshly ground black pepper, to taste\n
            5 cloves garlic, minced\n
            1/4 cup chicken stock\n
            Juice of 1 lemon, or more, to taste\n
            2 tablespoons chopped fresh parsley leaves\n\n
        <b>Directions:</b>\n
            1) Melt 2 tablespoons butter in a large skillet over medium high heat. \n
            2) Add shrimp, salt and pepper, to taste. Cook, stirring occasionally, until pink, about 2-3 minutes; set aside. \n
            3) Add garlic to the skillet, and cook, stirring frequently, until fragrant, about 1 minute. \n
            4) Stir in chicken stock and lemon juice. \n
            5) Bring to a boil; reduce heat and simmer until reduced by half, about 1-2 minutes. \n
            6) Stir in remaining 6 tablespoons butter, 1 tablespoon at a time, until melted and smooth.\n
            7) Stir in shrimp and gently toss to combine.\n
            8) Serve immediately, garnished with parsley leaves, if desired.\n
    </string>
    <string name="romanchickenexp">
        <b>Ingredients:</b>\n
            4 skinless chicken breast halves, with ribs \n
            2 skinless chicken thighs, with bones \n
            1/2 teaspoon salt, plus 1 teaspoon \n
            1/2 teaspoon freshly ground black pepper, plus 1 teaspoon \n
            1/4 cup olive oil \n
            1 red bell pepper, sliced \n
            1 yellow bell pepper, sliced \n
            3 ounces prosciutto, chopped \n
            2 cloves garlic, chopped \n
            1 (15-ounce) can diced tomatoes \n
            1/2 cup white wine \n
            1 tablespoon fresh thyme leaves \n
            1 teaspoon fresh oregano leaves \n
            1/2 cup chicken stock \n
            2 tablespoons capers \n
            1/4 cup chopped fresh flat-leaf parsley leaves \n\n
        <b>Directions:</b>\n
            1) Season the chicken with 1/2 teaspoon salt and 1/2 teaspoon pepper. In a heavy, large skillet, heat the olive oil over medium heat. When the oil is hot, cook the chicken until browned on both sides. Remove from the pan and set aside.\n
            2) Keeping the same pan over medium heat, add the peppers and prosciutto and cook until the peppers have browned and the prosciutto is crisp, about 5 minutes.\n
            3) Add the garlic and cook for 1 minute. Add the tomatoes, wine, and herbs. Using a wooden spoon, scrape the browned bits off the bottom of the pan. Return the chicken to the pan, add the stock, and bring the mixture to a boil. Reduce the heat and simmer, covered, until the chicken is cooked through, about 20 to 30 minutes.\n
    </string>
    <string name="salmonexp">
        <b>Ingredients:</b>\n
            2 cloves garlic, minced \n
            6 tablespoons light olive oil \n
            1 teaspoon dried basil \n
            1 teaspoon salt \n
            1 teaspoon ground black pepper \n
            1 tablespoon lemon juice \n
            1 tablespoon fresh parsley, chopped \n
            2 (6 ounce) fillets salmon \n\n
        <b>Directions:</b>\n
            1) In a medium glass bowl, prepare marinade by mixing garlic, light olive oil, basil, salt, pepper, lemon juice and parsley. Place salmon fillets in a medium glass baking dish, and cover with the marinade. Marinate in the refrigerator about 1 hour, turning occasionally. \n
            2) Preheat oven to 375 degrees F (190 degrees C). \n
            3) Place fillets in aluminum foil, cover with marinade, and seal. Place sealed salmon in the glass dish, and bake 35 to 45 minutes, until easily flaked with a fork. \n
    </string>

</resources>
