<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_menu_exercise"
            android:title="@string/exercise" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_menu_calculator"
            android:title="@string/bmiTitle" />
        <item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/ic_menu_recipe"
            android:title="@string/healthyrecipe" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black"
            android:title="@string/feedback" />
    </group>
</menu>
